--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="navy">#090038</color>
+    <color name="pink">#E02582</color>
+    <color name="yellow">#F2B500</color>
+    <color name="purple">#8E1C86</color>
 </resources>
