--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -3,33 +3,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="180dp"
+    android:layout_height="160dp"
     android:gravity="bottom"
     android:padding="20dp"
-    android:background="@color/white">
+    android:background="@color/navy">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        app:cardCornerRadius="40dp"
-        app:cardElevation="0dp"
-        android:backgroundTint="@color/black">
-
-        <ImageView
-            android:id="@+id/userImage"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/nav_close"/>
-    </androidx.cardview.widget.CardView>
+    <ImageButton
+        android:id="@+id/buttonDrawerToggle"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:background="@android:color/transparent"
+        android:padding="5dp"
+        android:src="@drawable/close"
+        app:tint="@android:color/white" />
 
     <TextView
         android:id="@+id/textUsername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Username"
-        android:textColor="@color/white"
+        android:textColor="@color/pink"
         android:textStyle="bold"
-        android:textSize="15sp"
+        android:textSize="15dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="5dp"/>
 </LinearLayout>
