--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity"
     android:background="@drawable/background_gradient"
-    android:padding="50dp">
+    android:paddingHorizontal="50dp"
+    android:paddingVertical="30dp">
 
     <ImageView
         android:id="@+id/logo"
@@ -65,6 +66,20 @@
         android:text="Username cannot be empty!"
         android:textSize="18dp"
         android:textColor="@color/white"
+        android:layout_centerHorizontal="true"
+        android:visibility="invisible"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/loginBtn"
+        android:layout_below="@id/errorLabel"
+        android:layout_marginTop="30dp"
+        android:layout_width="150dp"
+        android:layout_height="45dp"
+        android:text="LOGIN"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:background="@drawable/custom_login_btn"
         android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
